@@ -1,3 +1,4 @@
+// Copyright (2006) Schibsted Søk AS
 package no.schibstedsok.front.searchportal.result;
 
 import no.schibstedsok.front.searchportal.configuration.FastNavigator;
@@ -11,18 +12,18 @@ public class Modifier implements Comparable {
     private String name;
     private FastNavigator navigator;
 
-    public Modifier(String name, int count, FastNavigator navigator) {
+    public Modifier(final String name, final int count, final FastNavigator navigator) {
         this.name = name;
         this.count = count;
         this.navigator = navigator;
     }
 
-    public Modifier(String name, FastNavigator navigator) {
+    public Modifier(final String name, final FastNavigator navigator) {
         this.name = name;
         this.navigator = navigator;
     }
 
-    public void addCount(int count) {
+    public void addCount(final int count) {
         this.count += count;
     }
 
@@ -38,11 +39,11 @@ public class Modifier implements Comparable {
         return name;
     }
 
-    public int compareTo(Object o) {
-        Modifier other = (Modifier) o;
+    public int compareTo(final Object o) {
+        final Modifier other = (Modifier) o;
 
-        Integer otherCount = new Integer(other.getCount());
-        Integer thisCount = new Integer(getCount());
+        final Integer otherCount = Integer.valueOf(other.getCount());
+        final Integer thisCount = Integer.valueOf(getCount());
 
         return otherCount.compareTo(thisCount);
     }
