@@ -5,14 +5,12 @@ import java.text.DateFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.Map;
-import java.util.Properties;
 import java.util.TimeZone;
+import no.schibstedsok.common.ioc.ContextWrapper;
 
-import no.schibstedsok.front.searchportal.configuration.loader.PropertiesLoader;
 
 import no.schibstedsok.front.searchportal.view.i18n.TextMessages;
 import no.schibstedsok.front.searchportal.result.SearchResultItem;
-import no.schibstedsok.front.searchportal.site.Site;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -21,7 +19,7 @@ import org.apache.commons.logging.LogFactory;
  * @author <a href="mailto:magnus.eklund@schibsted.no">Magnus Eklund</a>
  * @version <tt>$Revision$</tt>
  */
-public class AgeCalculatorResultHandler implements ResultHandler {
+public final class AgeCalculatorResultHandler implements ResultHandler {
 
     private static final String FAST_DATE_FMT = "yyyy-MM-dd'T'HH:mm:ss'Z'";
 
@@ -31,7 +29,7 @@ public class AgeCalculatorResultHandler implements ResultHandler {
     private boolean asDate = false;
     private String ageMessageFormat;
 
-    private transient static Log log = LogFactory.getLog(AgeCalculatorResultHandler.class);
+    private static final Log LOG = LogFactory.getLog(AgeCalculatorResultHandler.class);
 
     public void handleResult(final Context cxt, final Map parameters) {
 
@@ -53,58 +51,52 @@ public class AgeCalculatorResultHandler implements ResultHandler {
                     final long stamp = df.parse(docTime).getTime();
                     final long age = System.currentTimeMillis() - stamp;
 
-                    if (log.isDebugEnabled()) {
-                        log.debug("Doctime is " + docTime);
+                    if (LOG.isDebugEnabled()) {
+                        LOG.debug("Doctime is " + docTime);
                     }
 
                     final Long dateParts[] = new Long[3];
 
-                    dateParts[0] = new Long(age / (60 * 60 * 24 * 1000));
-                    dateParts[1] = new Long(age / (60 * 60 * 1000) % 24);
-                    dateParts[2] = new Long(age / (60 * 1000) % 60);
+                    dateParts[0] = Long.valueOf(age / (60 * 60 * 24 * 1000));
+                    dateParts[1] = Long.valueOf(age / (60 * 60 * 1000) % 24);
+                    dateParts[2] = Long.valueOf(age / (60 * 1000) % 60);
 
                     String ageString = ""; // = TextMessages.getMessages().getMessage(currentLocale, ageFormatKey, dateParts);
                     final String[]  s = (String[]) parameters.get("contentsource");
 
-                    final TextMessages txtMsgs = TextMessages.valueOf(new TextMessages.Context() {
-                        public Site getSite() {
-                            return cxt.getSite();
-                        }
-                        public PropertiesLoader newPropertiesLoader(final String rsc, final Properties props) {
-                            return cxt.newPropertiesLoader(rsc, props);
-                        }
-                    });
+                    final TextMessages txtMsgs = TextMessages.valueOf(
+                            ContextWrapper.wrap(TextMessages.Context.class, cxt));
 
                     //older than 3 days or source is Mediearkivet, show dd.mm.yyyy
                     if (dateParts[0].longValue() > 3 || s != null && s[0].equals("Mediearkivet") || asDate == true)
                         ageString = docTime.substring(8, 10) + "." + docTime.substring(5, 7) + "." + docTime.substring(0, 4);
                     //more than 1 day, show days
                     else if (dateParts[0].longValue() > 0) {
-                        dateParts[1] = new Long(0);
-                        dateParts[2] = new Long(0);
+                        dateParts[1] = Long.valueOf(0);
+                        dateParts[2] = Long.valueOf(0);
                         ageString = txtMsgs.getMessage(ageFormatKey, (Object[])  dateParts);
                     //more than 1 hour, show hours
                     } else if (dateParts[1].longValue() > 0) {
-                        dateParts[2] = new Long(0);
+                        dateParts[2] = Long.valueOf(0);
                         ageString = txtMsgs.getMessage(ageFormatKey, (Object[]) dateParts);
                     //if less than 1 hour, show minutes
                     } else if (dateParts[2].longValue() > 0) {
-                        dateParts[0] = new Long(0);
-                        dateParts[1] = new Long(0);
+                        dateParts[0] = Long.valueOf(0);
+                        dateParts[1] = Long.valueOf(0);
                         ageString = txtMsgs.getMessage(ageFormatKey, (Object[]) dateParts);
                     } else
                         ageString = docTime.substring(8, 10) + "." + docTime.substring(5, 7) + "." + docTime.substring(0, 4);
 
-                    if (log.isDebugEnabled()) {
-                        log.debug("Resulting age string is " + ageString);
+                    if (LOG.isDebugEnabled()) {
+                        LOG.debug("Resulting age string is " + ageString);
                     }
 
                     item.addField(getTargetField(), ageString);
                 } catch (ParseException e) {
-                    log.warn("Unparsable date: " + docTime);
+                    LOG.warn("Unparsable date: " + docTime);
                 }
             } else {
-                log.warn(sourceField + " is null");
+                LOG.warn(sourceField + " is null");
             }
         }
 
